# libpipeline

./: .bzrignore  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  project.config  release.sh
gnulib/: gets.patch
gnulib/lib/: Makefile.am  Makefile.in  xmalloc.c  xmalloc.patch
gnulib/m4/: gnulib-cache.m4  gnulib-comp.m4
lib/: Makefile.am  Makefile.in  debug.c  libpipeline.pc.in  pipeline-private.h  pipeline.c  pipeline.h
m4/: pipeline-gcc-warning.m4
man/: Makefile.am  Makefile.in  libpipeline.3
po/: LINGUAS  Makevars  POTFILES.in  ca.po  cs.po  da.po  de.po  es.po  fi.po  fr.po  id.po  it.po  ja.po  libpipeline.pot  nl.po  pl.po  pt_BR.po  ro.po  ru.po  sv.po  vi.po  zh_CN.po
tests/: Makefile.am  Makefile.in  argstr.c  basic.c  common.c  common.h  exec.c  inspect.c  pump.c  reading_long_line.c  redirect.c
